added local api

--- a/app.html
+++ b/app.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>NW Vue Boilerplate</title>
+    <title>Pinpoint</title>
 
     <link href="./build/css/main.css" rel="stylesheet" type="text/css">
     <link href="./build/css/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./libs/font-awesome-4.6.1/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./libs/leaflet/leaflet.css" />
+	<link rel="stylesheet" href="./node_modules/leaflet-draw/dist/leaflet.draw.css" />
     <!-- Load real app code -->
     <script src="node_modules/nw-dev/lib/dev.js"></script> 
 </head>
@@ -51,6 +52,8 @@
 	<script src="./node_modules/vue/dist/vue.js"></script>
     <script src="./node_modules/vue-strap/dist/vue-strap.js"></script>
     <script src="./libs/leaflet/leaflet.js"></script>
+    <script src="./libs/leaflet-search-control.js"></script>
+    <script src="./node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
